"Parameterized ExampleResource message"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # Configuration file
 # key = value
+%dev.hello.message=Hello, J4K 2020!
+%test.hello.message=hello
+hello.message=Hello from Quarkus!
